tests/neg-custom-args/captures/mut-iterator2.check
-- Error: tests/neg-custom-args/captures/mut-iterator2.scala:9:26 ------------------------------------------------------
9 |    update def next() = f(Iterator.this.next()) // error
  |                          ^^^^^^^^^^^^^
  |                          Read-only method map accesses exclusive capability `Iterator.this`;
  |                          method map should be declared an update method to allow this.
